docs: update CoreUI Icons

--- a/docs/layouts/partials/head.html
+++ b/docs/layouts/partials/head.html
@@ -31,4 +31,4 @@
 {{ partial "social" . }}
 {{ partial "analytics" . }}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@coreui/icons@3.0.1/css/flag.min.css" integrity="sha256-Khtd1l8vTT/RIQluRIxdNzqOpWUePUJm+Yp2msTUazU=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@coreui/icons@3.0.1/css/free.min.css" integrity="sha256-iPn4UEr4v9lQ4q5UBeD9BOoONZRnTeZZ8YqtcdmTlO8=" crossorigin="anonymous">
