--- a/docs/layouts/partials/banner.html
+++ b/docs/layouts/partials/banner.html
@@ -1,14 +1,15 @@
 {{ if .Page.Params.pro_component }}
-  <div class="bg-danger bg-opacity-10 border-start border-start-5 border-start-danger p-4 pb-3 mb-5">
-    <h3 class="mb-4">CoreUI PRO Component</h3>
-    <p>
-      To use this component you must have a CoreUI PRO license. Buy the <a href="https://coreui.io/pricing/?framework=bootstrap&docs=coreui-banner-pro">CoreUI PRO</a> and get access to all PRO components, features, templates, and dedicated support.
-    </p>
+<div class="bg-info bg-opacity-10 border border-2 border-info rounded d-flex align-items-center p-3 px-xl-4 mb-5 row flex-xl-nowrap">
+  <div class="col-xl-auto col-12 d-none d-xl-block p-0">
+    <img src="https://coreui.io/images/frameworks/core_blue_960px.png" class="img-fluid" width="160px" height="160px" alt="CoreUI PRO hexagon">
   </div>
+  <div class="col-md col-12 px-lg-4">This Component is a part of CoreUI PRO, an advanced UI library offering over 100 components designed for creating responsive, sleek, and powerful applications. Experience it yourself by signing up for a complimentary 7-day trial.</div>
+  <div class="col-md-auto col-12 mt-3 mt-lg-0"><a class="btn btn-danger text-nowrap text-white" href="https://coreui.io/trial/?src=coreui-docs&cta=pro-banner">Start Free Trial</a></div>
+</div>
 {{ end }}
 {{ if .Page.Params.preview_component }}
   <div class="bg-warning bg-opacity-10 border-start border-start-5 border-start-warning p-4 pb-3 mb-5">
-    <h3 className="mb-4">Alpha release</h3>
+    <h3 class="mb-4">Alpha release</h3>
     <p>
       This component is in the Alpha phase and has an experimental API, which can be changed in the final release. If you want to use this component, please install <strong>@coreui/coreui-pro {{ .Page.Params.preview_component }}</strong>
     </p>
