--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -11,16 +11,6 @@
           {{ partial "icons/github.svg" (dict "class" "icon icon-xl") }}
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/{{ .Site.Params.twitter }}" target="_blank" rel="noopener">
-          {{ partial "icons/twitter.svg" (dict "class" "icon icon-xl") }}
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://opencollective.com/{{ .Site.Params.opencollective }}" target="_blank" rel="noopener">
-          {{ partial "icons/opencollective.svg" (dict "class" "icon icon-xl") }}
-        </a>
-      </li>
       <li class="nav-item py-2 py-lg-1">
         <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-body text-opacity-75"></div>
         <hr class="d-lg-none my-2 text-white-50">
@@ -70,8 +60,8 @@
       {{ partial "icons/handshake.svg" (dict "class" "icon me-2") }}
       Hire Us
     </a>
-    <a class="btn btn-primary d-lg-inline-block my-2 my-md-0 ms-md-3" href="https://coreui.io/pricing/?framework=bootstrap&docs=coreui-header-button">
-      Buy CoreUI PRO
+    <a class="btn btn-primary d-lg-inline-block my-2 my-md-0 ms-md-3" href="https://coreui.io/pricing/?framework=bootstrap&src=coreui-docs&cta=coreui-header-button">
+      Get CoreUI PRO all-access →
     </a>
   </nav>
 </header>
