Rating fixes: - readonly class not added to a "readonly" .rating element, making the stars to grow when hovering - hovering over a readonly or disabled rating now shows a default cursor, not pointer (since you cannot click on it)

--- a/scss/_rating.scss
+++ b/scss/_rating.scss
@@ -18,7 +18,9 @@
 
   &:not(.disabled):not(.readonly) {
     .rating-item {
-      cursor: pointer;
+      .rating-item-label {
+        cursor: pointer;
+      }
 
       &:hover {
         transform: var(--#{$prefix}rating-item-scale-transform);
@@ -47,7 +49,7 @@
   font-size: var(--#{$prefix}rating-item-height);
   line-height: 0;
   color: var(--#{$prefix}rating-item-color);
-  cursor: pointer;
+  cursor: default;  // has cursor pointer only if the rating is not disabled or readonly (see above)
 
   * {
     pointer-events: none;
@@ -83,7 +85,7 @@
 .rating-item-icon {
   width: var(--#{$prefix}rating-item-height);
   height: var(--#{$prefix}rating-item-height);
-  cursor: pointer;
+  //cursor: pointer;  // has the cursor of rating-item-label (parent)
   background-color: var(--#{$prefix}rating-item-color);
   mask: var(--#{$prefix}rating-item-icon) center / var(--#{$prefix}rating-item-height) no-repeat;
 }
