feat(RangeSlider): new component initial release

--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -51,6 +51,7 @@
 @import "footer";
 @import "header";
 @import "icon";
+@import "range-slider";
 @import "rating";
 @import "sidebar";
 @import "time-picker";
