--- a/scss/themes/bootstrap/bootstrap.scss
+++ b/scss/themes/bootstrap/bootstrap.scss
@@ -6,6 +6,7 @@
 
 /* rtl:begin:ignore */
 @import "../../mixins/avatar";
+@import "../../mixins/border-radius";
 @import "../../mixins/elevation";
 @import "../../mixins/icon";
 @import "../../mixins/ltr-rtl";
