docs: add Black Friday banner

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -38,6 +38,7 @@ $enable-cssgrid: true;
 // Load docs components
 @import "variables";
 @import "ads";
+@import "banner";
 @import "content";
 @import "skippy";
 @import "header";
