--- a/docs/assets/scss/_banner.scss
+++ b/docs/assets/scss/_banner.scss
@@ -1,40 +1,14 @@
-.black-friday-banner {
-  position: relative;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 250px;
-  margin-bottom: 50px;
-  color: rgba(255, 255, 255, .86);
-  text-decoration: none;
-  background: linear-gradient(222deg, #2c384a, #000);
+.banner-black-friday {
+  padding: 2rem;
+  background: url("./../img/percents-bg.png") no-repeat, linear-gradient(222deg, #2c384a, #000);
 
-  &:hover {
-    color: rgba(255, 255, 255, 1);
-  }
-
-  &::before,
-  &::after {
-    position: absolute;
-    z-index: -1;
-    content: "";
-  }
-
-  &::before {
-    top: 0;
-    right: 0;
+  .black-friday-img {
     width: 100%;
-    max-width: 100%;
-    height: 100%;
-    background: url("./../img/cyber-bg.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100%;
-  }
+    max-width: 360px;
 
-  .logo {
-    max-width: 100%;
-    max-height: 400px;
+    @include media-breakpoint-up(xxl) {
+      max-width: 160px;
+      transform: scale(1.35) translateX(-15px);
+    }
   }
 }
