--- a/docs/layouts/partials/banner.html
+++ b/docs/layouts/partials/banner.html
@@ -1,10 +1,12 @@
 {{ if .Page.Params.pro_component }}
-<div class="bg-info bg-opacity-10 border border-2 border-info rounded d-flex align-items-center p-3 px-xl-4 mb-5 row flex-xl-nowrap">
-  <div class="col-xl-auto col-12 d-none d-xl-block p-0">
-    <img src="https://coreui.io/images/frameworks/core_blue_960px.png" class="img-fluid" width="160px" height="160px" alt="CoreUI PRO hexagon">
+<div class="bg-info bg-opacity-10 border border-2 border-info rounded p-3 px-xl-4 mb-5">
+  <div class="row d-flex align-items-center flex-xl-nowrap">
+    <div class="col-xl-auto col-12 d-none d-xl-block p-0">
+      <img src="https://coreui.io/images/frameworks/core_blue_960px.png" class="img-fluid" width="160px" height="160px" alt="CoreUI PRO hexagon">
+    </div>
+    <div class="col-md col-12 px-lg-4">This Component is a part of CoreUI PRO, an advanced UI library offering over 100 components designed for creating responsive, sleek, and powerful applications. Experience it yourself by signing up for a complimentary 7-day trial.</div>
+    <div class="col-md-auto col-12 mt-3 mt-lg-0"><a class="btn btn-danger text-nowrap text-white" href="https://coreui.io/trial/?src=coreui-docs&cta=pro-banner">Start Free Trial</a></div>
   </div>
-  <div class="col-md col-12 px-lg-4">This Component is a part of CoreUI PRO, an advanced UI library offering over 100 components designed for creating responsive, sleek, and powerful applications. Experience it yourself by signing up for a complimentary 7-day trial.</div>
-  <div class="col-md-auto col-12 mt-3 mt-lg-0"><a class="btn btn-danger text-nowrap text-white" href="https://coreui.io/trial/?src=coreui-docs&cta=pro-banner">Start Free Trial</a></div>
 </div>
 {{ end }}
 {{ if .Page.Params.preview_component }}
