docs: add XMas banner

--- a/docs/layouts/_default/docs.html
+++ b/docs/layouts/_default/docs.html
@@ -3,7 +3,7 @@
   <main class="docs-main order-1">
     <div class="docs-intro ps-lg-4">
       {{ partial "breadcrumb" . }}
-      {{ partial "banner-black-friday" . }}
+      {{ partial "banner-xmas" . }}
       {{ partial "banner" . }}
       {{ if .Page.Params.bootstrap }}
       <div class="d-flex flex-column">
