--- a/docs/layouts/partials/scripts.html
+++ b/docs/layouts/partials/scripts.html
@@ -33,7 +33,9 @@
 {{- $snippetsFile := resources.Get "js/snippets.js" | js.Build (merge $esbuildOptions (dict "minify" "false")) -}}
 {{- $esbuildParams := dict
   "cssCdn" .Site.Params.cdn.css
+  "cssProCdn" .Site.Params.cdn.css_pro
   "jsBundleCdn" .Site.Params.cdn.js_bundle
+  "jsProBundleCdn" .Site.Params.cdn.js_pro_bundle
   "docsVersion" .Site.Params.docs_version
   "jsSnippetFile" $snippetsFile.Content
 -}}
