--- a/docs/layouts/shortcodes/example.html
+++ b/docs/layouts/shortcodes/example.html
@@ -14,6 +14,8 @@
 {{- $class := .Get "class" -}}
 {{- $lang := .Get "lang" | default "html" -}}
 {{- $stackblitz_add_js := .Get "stackblitz_add_js" | default false -}}
+{{- $stackblitz_dayjs := .Get "stackblitz_dayjs" | default false -}}
+{{- $stackblitz_pro := .Get "stackblitz_pro" | default false -}}
 {{- $show_markup := .Get "show_markup" | default true -}}
 {{- $show_preview := .Get "show_preview" | default true -}}
 {{- $input := .Inner -}}
@@ -31,7 +33,7 @@
       <div class="d-flex align-items-center highlight-toolbar ps-3 pe-2 py-1 border-0 border-top border-bottom">
         <small class="font-monospace text-body-secondary text-uppercase">{{- $lang -}}</small>
         <div class="d-flex ms-auto">
-          <button type="button" class="btn-edit text-nowrap"{{ with $stackblitz_add_js }} data-sb-js-snippet="{{ $stackblitz_add_js }}"{{ end }} title="Try it on StackBlitz">
+          <button type="button" class="btn-edit text-nowrap"{{ with $stackblitz_add_js }} data-sb-js-snippet="{{ $stackblitz_add_js }}"{{ end }}{{ with $stackblitz_pro }} data-sb-pro="true"{{ end }}{{ with $stackblitz_dayjs }} data-sb-dayjs="true"{{ end }} title="Try it on StackBlitz">
             <svg class="icon" width="56" height="78" viewBox="0 0 56 78" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M23.4273 48.2853C23.7931 47.5845 23.0614 46.8837 22.3298 46.8837H1.11228C0.0148224 46.8837 -0.350997 45.8326 0.380642 45.1318L40.9866 0.282084C41.7182 -0.418693 43.1815 0.282084 42.8157 1.33325L32.9386 30.0651C32.5727 30.7659 32.9386 31.4666 33.6702 31.4666H54.8877C55.9852 31.4666 56.351 32.5178 55.6194 33.2186L15.0134 77.7179C14.2818 78.4187 12.8185 77.7179 13.1843 76.6667L23.4273 48.2853Z" fill="currentColor"></path>
             </svg>
